# ChambApp

./: .eslintrc.js  .gitignore  README.md  app.json  env.d.ts  metro.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
.husky/: pre-commit
app/: _layout.tsx  index.tsx
app/(User)/: chambaView.tsx  menu.tsx
server/: .pre-commit-config.yaml  README.md  db.sql  pyproject.toml  requirements.txt
server/app/: config.py  database.py  main.py  model.py
server/app/core/: config.py  database.py
server/app/routers/: advertisement.py  areas.py  chat.py  login.py  messages.py  users.py
src/app/: _layout.tsx
src/app/(auth)/: _layout.tsx  index.tsx  sign-up.tsx
src/app/(chamber)/: _layout.tsx  chambaView.tsx  index.tsx  menu.tsx  profile.tsx  starRating.tsx
src/app/(chamber)/(tabs)/: _layout.tsx  index.tsx  profile.tsx
src/app/(unauthenticated)/: _layout.tsx  index.tsx
src/app/(user)/: _layout.tsx  index.tsx
src/app/(user)/(advertisement)/: _layout.tsx  create.tsx
src/app/(user)/(tabs)/: _layout.tsx  history.tsx  index.tsx  profile.tsx
src/components/: Separator.tsx  navegation.tsx
src/components/icons/: AppleIcon.tsx  GoogleIcon.tsx
src/components/ui/: Avatar.tsx  Separator.tsx  Skeleton.tsx  TabBar.tsx  index.ts
src/components/views/chamber/: AdvertisementCard.tsx  AdvertisementSuggestionCard.tsx  BottomSheetAdvertisement.tsx  BottomSheetSuggestionCard.tsx  ChambaCard.tsx  (+1 more)
src/contexts/: AuthContext.tsx  ChatContext.tsx
src/hooks/: useAuth.ts  useChat.ts
src/utils/: convertHour.ts  formatMoney.ts  timeAgo.tsx
(+18 files in other folders)
